Add a test blog about leetcode 292, 2016-10-14

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Zhu Jian Blog
+title: 朱建的博客
 SEOTitle: 朱建的博客 | Zhu Jian Blog
 header-img: img/home-bg.jpg
 email: zhujian.whu.cs@gmail.com
