--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 朱建的博客
+title: Zhu Jian Blog
 SEOTitle: 朱建的博客 | Zhu Jian Blog
 header-img: img/home-bg.jpg
 email: zhujian.whu.cs@gmail.com
 description: ""
 keyword: ""
-url: "http://http://zhujian19891203.github.io"              # your host, for absolute URL
-baseurl: "/homepage"                                        # for example, '/blog' if your blog hosted on 'host/blog'
+url: "http://zhujian19891203.github.io"              # your host, for absolute URL
+baseurl: "/homepage"                                 # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
