--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Zhu Jian Blog
-SEOTitle: 朱建的博客 | Zhu Jian Blog
+title: Jian Zhu Blog
+SEOTitle: 朱建的博客 | Jian Zhu Blog
 header-img: img/home-bg.jpg
 email: zhujian.whu.cs@gmail.com
 description: ""
